Fix Men Aligned issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,12 @@
 }
 
 /* Line clamp utility for text truncation */
+.line-clamp-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 .line-clamp-2 {
   display: -webkit-box;
   -webkit-line-clamp: 2;
